force-app/chapter00/default/objects/Tag__c/fields/AAT__c.field-meta.xml
<CustomField>
    <fullName>AAT__c</fullName>
    <description>The AAT number, as provided by The Metropolitan&apos;s Open Access API.</description>
    <formula>SUBSTITUTE(AAT_URL__c, &apos;http://vocab.getty.edu/page/aat/&apos;, &apos;&apos;)</formula>
    <label>AAT</label>
    <type>Text</type>
</CustomField>