force-app/chapter00/default/objects/Tag__c/fields/AAT_URL__c.field-meta.xml
<CustomField>
    <fullName>AAT_URL__c</fullName>
    <description>The AAT URL for the asset tag, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>AAT URL</label>
    <type>Url</type>
</CustomField>