force-app/chapter00/default/objects/Tag__c/fields/Wikidata_URL__c.field-meta.xml
<CustomField>
    <fullName>Wikidata_URL__c</fullName>
    <description>The Wikidata URL for the asset tag, as provided by The Metropolitan&apos;s Open Access API.</description>
    <label>Wikidata URL</label>
    <type>Url</type>
</CustomField>